minor update to match design

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 jumper/game/__pycache__/director.cpython-310.pyc
 jumper/game/__pycache__/jumper.cpython-310.pyc
+jumper/game/__pycache__/director.cpython-310.pyc
+jumper/game/__pycache__/puzzle.cpython-310.pyc
+jumper/game/__pycache__/director.cpython-310.pyc
+jumper/game/__pycache__/puzzle.cpython-310.pyc
